--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,5 @@ services:
       - "3306:3306"
     volumes:
       - ~/Projects/docker/mysql/ecommerce-data:/var/lib/mysql
+#SET GLOBAL log_bin_trust_function_creators=1;
+#SET GLOBAL sql_mode=(SELECT REPLACE(@@sql_mode,'ONLY_FULL_GROUP_BY',''));
